[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "buildforge"
version = "1.0.0"
description = "A dynamic build orchestration environment for OpenEnv"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "numpy",
    "openai",
    "requests",
    "stable-baselines3",
    "gymnasium",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]
include = ["environment*"]