[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "buildforge"
version = "1.0.0"
description = "A dynamic build orchestration environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "numpy",
    "openai",
    "requests",
    "stable-baselines3",
    "gymnasium",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["environment*"]